--- a/hello.html
+++ b/hello.html
@@ -41,7 +41,7 @@
   <div class="item">
     <div id="play-talk" class="btn">播放</div>
   </div>
-  <script src="https://cdn.static.runoob.com/libs/jquery/1.10.2/jquery.min.js"></script>
+  <script src="http://cdn.static.runoob.com/libs/jquery/1.10.2/jquery.min.js"></script>
   <script src="http://res.wx.qq.com/open/js/jweixin-1.2.0.js"></script>
   <!-- 引入 LeanCloud 存储 SDK -->
   <script src="https://cdn1.lncld.net/static/js/av-min-1.0.0.js"></script>
